Revert "refactor) 자바버전 조정"
This reverts commit c2d5a73e377be77af0ce9dc9a040fe2caf8e43d5.